<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fyber_challenge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_alignParentTop="true"
        android:id="@+id/uid"
        android:text="spiderman"
        android:hint="@string/uid_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/api_key"
        android:layout_below="@id/uid"
        android:hint="@string/api_key_hint"
        android:text="1c915e3b5d42d05136185030892fbb846c278927"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/app_id"
        android:layout_below="@id/api_key"
        android:hint="@string/application_id_provided_as_simple_data"
        android:text="2070"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/app_id"
        android:id="@+id/pub0"
        android:hint="@string/custom_parameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/pub0"
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:enabled="false"/>

</RelativeLayout>
